# taishi.wtf

./: .gitignore  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vite.config.ts  vite.ts  wrangler.toml
.docker/api/: .Dockerfile
.github/actions/setup-gcp-auth/: action.yaml
.github/actions/setup-node/: action.yaml
.github/actions/setup-rust/: action.yaml
.github/workflows/: check.yml  deploy.yml
api/: Cargo.toml  Dockerfile  service.yaml
api/src/: main.rs
apps/api/: Cargo.toml
apps/api/src/: image_handler.rs  main.rs
apps/web/: build.ts  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
apps/web/src/: index.tsx  routes.tsx
apps/web/src/handlers/: check.ts  index.ts
apps/web/src/middlewares/: apply.ts  pretty-json.ts
frontend/: package.json  tsconfig.json  wrangler.toml
frontend/src/: index.tsx  routes.tsx
frontend/src/components/: Layout.tsx
frontend/src/utils/: headers.ts
src/: client.tsx  files.ts  index.ts  index.tsx
src/components/: Layout.tsx
src/components/Routes/: Color.tsx  index.ts
src/utils/: createSatori.ts  get-ip.ts  hono-router.ts  react-renderer.tsx  satori.ts
tf-infra/: artifact_registry.tf  gcp_gh_oidc.tf  main.tf  services.tf  variables.tf  variables.tfvars
tf_deploy/: .terraform.lock.hcl  artifact_registry.tf  cloud_run.tf  cloudflare_pages.tf  main.tf  services.tf  variables.tf  variables.tfvars
tf_setup/: .terraform.lock.hcl  artifact_registry.tf  cloudflare_pages.tf  gcp_gh_oidc.tf  main.tf  services.tf  variables.tf  variables.tfvars
(+10 files in other folders)
