[package]
name = "taishi-wtf-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.7.5"
clap = {version = "4", features = ["derive", "env"] }
dotenvy = "0.15.7"
image = "0.25.2"
libvips = "1.7.0"
tiny-skia = "0.11.4"
tokio = { version = "1", features = ["full"] }

# resvg = { version = "0.42.0" }
# svg = "0.17.0"
